출석체크 적용
